lib/src/native/wrapper/wrapper.h



/* Wrapper Helpers */


DART_EXPORT void dispatchCallback(char* methodname);


DART_EXPORT intptr_t InitDartApiDL(void* data);

DART_EXPORT void unloadCronet();



typedef void* ExecutorPtr;


DART_EXPORT ExecutorPtr Create_Executor();

DART_EXPORT void Destroy_Executor(ExecutorPtr executor);


/* typedefs, enums & struct declaration from cronet. Derived from cronet.idl_c.h */

typedef const char* Cronet_String;

typedef void* Cronet_RawDataPtr;

typedef void* Cronet_ClientContext;


// Forward declare interfaces.
typedef struct Cronet_Buffer Cronet_Buffer;

typedef struct Cronet_Buffer* Cronet_BufferPtr;

typedef struct Cronet_Engine Cronet_Engine;

typedef struct Cronet_Engine* Cronet_EnginePtr;

typedef struct Cronet_UrlRequest Cronet_UrlRequest;

typedef struct Cronet_UrlRequest* Cronet_UrlRequestPtr;

typedef struct Cronet_EngineParams Cronet_EngineParams;

typedef struct Cronet_EngineParams* Cronet_EngineParamsPtr;

typedef struct Cronet_UrlRequestParams Cronet_UrlRequestParams;

typedef struct Cronet_UrlRequestParams* Cronet_UrlRequestParamsPtr;


// Declare enums
typedef enum Cronet_RESULT {
  Cronet_RESULT_SUCCESS = 0,
  Cronet_RESULT_ILLEGAL_ARGUMENT = -100,
  Cronet_RESULT_ILLEGAL_ARGUMENT_STORAGE_PATH_MUST_EXIST = -101,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_PIN = -102,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HOSTNAME = -103,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_METHOD = -104,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_HEADER = -105,
  Cronet_RESULT_ILLEGAL_STATE = -200,
  Cronet_RESULT_ILLEGAL_STATE_STORAGE_PATH_IN_USE = -201,
  Cronet_RESULT_ILLEGAL_STATE_CANNOT_SHUTDOWN_ENGINE_FROM_NETWORK_THREAD = -202,
  Cronet_RESULT_ILLEGAL_STATE_ENGINE_ALREADY_STARTED = -203,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_STARTED = -204,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_INITIALIZED = -205,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_INITIALIZED = -206,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_STARTED = -207,
  Cronet_RESULT_ILLEGAL_STATE_UNEXPECTED_REDIRECT = -208,
  Cronet_RESULT_ILLEGAL_STATE_UNEXPECTED_READ = -209,
  Cronet_RESULT_ILLEGAL_STATE_READ_FAILED = -210,
  Cronet_RESULT_NULL_POINTER = -300,
  Cronet_RESULT_NULL_POINTER_HOSTNAME = -301,
  Cronet_RESULT_NULL_POINTER_SHA256_PINS = -302,
  Cronet_RESULT_NULL_POINTER_EXPIRATION_DATE = -303,
  Cronet_RESULT_NULL_POINTER_ENGINE = -304,
  Cronet_RESULT_NULL_POINTER_URL = -305,
  Cronet_RESULT_NULL_POINTER_CALLBACK = -306,
  Cronet_RESULT_NULL_POINTER_EXECUTOR = -307,
  Cronet_RESULT_NULL_POINTER_METHOD = -308,
  Cronet_RESULT_NULL_POINTER_HEADER_NAME = -309,
  Cronet_RESULT_NULL_POINTER_HEADER_VALUE = -310,
  Cronet_RESULT_NULL_POINTER_PARAMS = -311,
  Cronet_RESULT_NULL_POINTER_REQUEST_FINISHED_INFO_LISTENER_EXECUTOR = -312,
} Cronet_RESULT;



DART_EXPORT void registerHttpClient(Dart_Handle h, Cronet_EnginePtr ce);

DART_EXPORT void registerCallbackHandler(Dart_Port nativePort, Cronet_UrlRequestPtr rp);

DART_EXPORT void removeRequest(Cronet_UrlRequestPtr rp);




CRONET_EXPORT Cronet_EnginePtr Cronet_Engine_Create(void);


CRONET_EXPORT Cronet_String Cronet_Engine_GetVersionString(Cronet_EnginePtr self);

                                    
CRONET_EXPORT
Cronet_RESULT Cronet_Engine_StartWithParams(Cronet_EnginePtr self,
                                            Cronet_EngineParamsPtr params);

CRONET_EXPORT
Cronet_RESULT Cronet_Engine_Shutdown(Cronet_EnginePtr self);



// Create an instance of Cronet_UrlRequest.
CRONET_EXPORT Cronet_UrlRequestPtr Cronet_UrlRequest_Create(void);

// Destroy an instance of Cronet_UrlRequest.
CRONET_EXPORT void Cronet_UrlRequest_Destroy(Cronet_UrlRequestPtr self);


CRONET_EXPORT void Cronet_UrlRequest_Cancel(Cronet_UrlRequestPtr self);

// Set and get app-specific Cronet_ClientContext.
CRONET_EXPORT void Cronet_UrlRequest_SetClientContext(
    Cronet_UrlRequestPtr self,
    Cronet_ClientContext client_context);

CRONET_EXPORT Cronet_ClientContext
Cronet_UrlRequest_GetClientContext(Cronet_UrlRequestPtr self);


CRONET_EXPORT
Cronet_RESULT Cronet_UrlRequest_Start(Cronet_UrlRequestPtr self);

CRONET_EXPORT
Cronet_RESULT Cronet_UrlRequest_FollowRedirect(Cronet_UrlRequestPtr self);

CRONET_EXPORT
Cronet_RESULT Cronet_UrlRequest_Read(Cronet_UrlRequestPtr self,
                                     Cronet_BufferPtr buffer);


DART_EXPORT Cronet_RESULT Cronet_UrlRequest_Init(Cronet_UrlRequestPtr self, Cronet_EnginePtr engine, Cronet_String url, Cronet_UrlRequestParamsPtr params, ExecutorPtr _executor);


// Create an instance of Cronet_Buffer.
// CRONET_EXPORT Cronet_BufferPtr Cronet_Buffer_Create(void);

// Destroy an instance of Cronet_Buffer.
// CRONET_EXPORT void Cronet_Buffer_Destroy(Cronet_BufferPtr self);

// CRONET_EXPORT void Cronet_Buffer_InitWithAlloc(Cronet_BufferPtr self, uint64_t size);

CRONET_EXPORT uint64_t Cronet_Buffer_GetSize(Cronet_BufferPtr self);

CRONET_EXPORT Cronet_RawDataPtr Cronet_Buffer_GetData(Cronet_BufferPtr self);


CRONET_EXPORT
bool Cronet_Engine_StartNetLogToFile(Cronet_EnginePtr self,
                                     Cronet_String file_name,
                                     bool log_all);

CRONET_EXPORT
void Cronet_Engine_StopNetLog(Cronet_EnginePtr self);