third_party/cronet/cronet.idl_c.h

// Forward declare interfaces.
typedef struct Cronet_Buffer Cronet_Buffer;
typedef struct Cronet_Engine Cronet_Engine;
typedef struct Cronet_UrlRequest Cronet_UrlRequest;
typedef struct Cronet_EngineParams Cronet_EngineParams;
typedef struct Cronet_UrlRequestParams Cronet_UrlRequestParams;